[package]
name = "uupdump"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "interactively retrieve uuid of recent Win11 iso images from uupdump.net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "uupdump"
path = "main.rs"

[dependencies]
html_editor = "0.4"
rphtml = "0.5"
table-extract = "0.2"
skim = "0.9"
dialoguer = "0.10"
