[package]
name = "uupdump"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "interactively retrieve uuid of recent Win11 iso images from uupdump.net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "uupdump"
path = "main.rs"

[dependencies]
html_editor = "0.4"
rphtml = "0.5"
table-extract = "0.2"
dialoguer = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1"
somehow = "0.1"
